@@ -1,3 +1,14 @@
+2009-02-26  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Improve efficiency of GCC build; add more comments.
+
+	* x86-mingw32-build.sh: Add miscellaneous comments.
+	(GCC_LANGUAGE_SET): Enable all in STAGE 1 configuration.
+	(ALL_GCC, INSTALL_GCC): New shell variables; define them; use when...
+	[COMPONENT == gcc, STAGE == 1]: ...to facilite once-only configuration
+	with all languages selected, while still building only the C compiler;
+	reset at end of STAGE 1, to enable remaining languages in STAGE 2.
+
 2009-02-22  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Add diagnostic for invalid DOWNLOAD_HOST.
